create user with frontend form
add create user link
add route to /admin

--- a/adminviews/adduser.jade
+++ b/adminviews/adduser.jade
@@ -15,7 +15,7 @@ block content
                 tbody
     
     #form
-        form(name='addUser', method="post")
+        form(name='addUser', method="post" action="/admin/adduser")
             div.input
                 span.label username
                 input(type="text", name="username")
