--- a/adminviews/index.jade
+++ b/adminviews/index.jade
@@ -4,13 +4,14 @@ block content
     h1= title
     p Administration - NAV
     ul
-        li Add User
+        li
+            a(href="/admin/adduser") User
         li Delete User
         li Modify User
         li Show statistics for user
-        
 
-    #wrapper    
+
+    #wrapper
         h2 User List
         #userList
             table
