add bower and jquery as bower install

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/clock.css')
   body
     block content
-    script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(src='/jquery/dist/jquery.js')
     script(src='/javascripts/global.js')
     script(src='/javascripts/clock.js')
 
