implement Rest-DELETE

--- a/adminviews/adduser.jade
+++ b/adminviews/adduser.jade
@@ -11,9 +11,9 @@ block content
                     th username
                     th full name
                     th status
-                    th sessions
+                    th delete
                 tbody
-    
+    h2 Add User:
     #form
         form(name='addUser', method="post" action="/admin/adduser")
             div.input
