--- a/adminviews/layout.jade
+++ b/adminviews/layout.jade
@@ -7,6 +7,6 @@ html
   body
     block content
     script(src='/bower_components/jquery/dist/jquery.js')
-    script(src='/javascripts/global.js')
+    script(src='/javascripts/adminglobal.js')
     script(src='/javascripts/clock.js')
 
