Render after adduser-operation

--- a/adminviews/adduser.jade
+++ b/adminviews/adduser.jade
@@ -36,4 +36,5 @@ block content
                         td
                             div.action
                         td
+                            input(type='hidden' name='status' value=0)
                             input(type="submit", value="add")
