--- a/adminviews/index.jade
+++ b/adminviews/index.jade
@@ -3,12 +3,6 @@ extends layout
 block content
     h1= title
     p Administration - NAV
-    ul
-        li
-            a(href="/admin/adduser") User
-        li Delete User
-        li Modify User
-        li Show statistics for user
 
 
     #wrapper
@@ -19,5 +13,11 @@ block content
                     th username
                     th full name
                     th status
-                    th sessions
+                    th delete user
                 tbody
+
+    ul
+        li
+            a(href="/admin/adduser") Add User
+        li
+            a(href="/admin/showall") Show All
