Implement hour-total in admin-interface

--- a/adminviews/details.jade
+++ b/adminviews/details.jade
@@ -43,7 +43,8 @@ block content
                 thead
                     th username
                     th full name
-                    th status
+                    th sessions
+                    th total hours
                     th delete user
                 tbody
 
