finegraine jquery usage

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,14 +28,14 @@ block content
                     tbody
                         tr
                             td
-                                button start
+                                button(id='start') start
                             td
-                                button stop
+                                button(id='stop') stop
                         tr
                             td
-                                button Zigi
+                                button(id='zigi') Zigi
                             td
-                                button Zmittag
+                                button(id='zmittag') Zmittag
 
 
         h2 User List
